--- a/index.html
+++ b/index.html
@@ -17,6 +17,12 @@
             align-items: center;
             min-height: 100vh;
         }
+
+        .heading5{
+            font-size: 15px;
+            margin: 0;
+        }
+
         .box {
             height: 500px;
             width: 900px;
@@ -26,7 +32,7 @@
             overflow: auto;
         }
         .content {
-
+            height: 100%;
         }
         .main {
             display: flex;
